--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,21 +8,11 @@ public_folder: "images"
 collections:
   - name: "post" 
     label: "Post" 
-    folder: "content/post"  
+    folder: "content/posts"  
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}--{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "image", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}
-  - name: "test" 
-    label: "Test" 
-    folder: "content/post"  
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}--{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "image", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "markdown"} 
