--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,6 +8,7 @@ public_folder: "images"
 collections:
   - name: "post" 
     label: "Post" 
+    path: {{slug}}/index
     folder: "content/posts"  
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}--{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
