--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,7 +6,7 @@ media_folder: "static/images"
 public_folder: "images" 
 
 collections:
-  - name: "post" 
+    name: "post" 
     label: "Post" 
     path: {{slug}}/index
     folder: "content/posts"  
