--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,14 +6,13 @@ media_folder: "static/images"
 public_folder: "images" 
 
 collections:
-    name: "post" 
-    label: "Post" 
-    path: {{slug}}/index
-    folder: "content/posts"  
+  - name: "posts" # Used in routes, e.g., /admin/collections/post
+    label: "Posts" # Used in the UI
+    folder: "content/posts" # The path to the folder where the documents are stored
+    path: "{{slug}}/index"
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}--{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "image", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"} 
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Body", name: "body", widget: "markdown" }
